# gemma-harness

./: .env.example  .gitignore  README.md  config.yaml  program.md  prompts.py  pyproject.toml
docs/: ANALYSIS_2026-04-24_unknown_zero.md  DESIGN_2026-04-21_protocol_drift_defense.md  DESIGN_2026-04-23_tool_surface_expansion.md  DESIGN_2026-04-24_mini_set.md  Design 2026 04 22 fast eval proxy · MD  OBSERVED_ISSUE_2026-04-21_MODEL_PROTOCOL_DRIFT.md  OBSERVED_ISSUE_2026-04-22_AGENT_TIMEOUT.md  OVERVIEW.md  OVERVIEW_REVIEW_2026-04-21.md  PROGRESS_2026-04-20.md  REMEDIATION_PLAN_2026-04-22.md  STATUS_2026-04-22.md  STATUS_2026-04-22b.md  TOOLS_WORKSHOP_2026-04-23.md  VERDICT_2026-04-25_prompt_v4.md  VERDICT_2026-04-25_prompt_v5.md  WORKSHOP_2026-04-24_finetune_and_distill.md  gemma_harness_requirement.md
eval/: scoring.py  subsets.py  terminal_bench.py
harness/: __init__.py  agent.py  client.py  context.py  harness.py  tools.py
jobs/2026-04-20__12-09-27/: config.json  result.json
jobs/2026-04-20__12-10-55/: config.json  result.json
jobs/2026-04-20__12-20-19/: config.json  result.json
jobs/2026-04-20__12-27-20/: config.json  result.json
jobs/2026-04-20__12-34-11/: config.json  result.json
optimizer/: apply.py  archive.py  propose.py
policies/: stop-loops.md  submit-early.md
prompts/: system.md
reviews/: GEMINI_AUDIT_2026-04-20.md
runs/: ledger.jsonl
scripts/: .run_baseline.py  .run_validate.py  baseline.sh  full_benchmark.sh  mini_set.sh  overnight.sh  record_baseline.py  test_trivial.py  validate.sh
skills/: plan.md
(+1167 files in other folders)
